# geneos-xtender

./: .gitattributes  .gitignore  .projectile  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  package_deb.yaml
.github/workflows/: audit.yaml  deploy.yaml  test.yaml
compose/: README.org
scripts/: build_and_run_bats.sh  post_install.sh
src/: check.rs  lib.rs  main.rs  opspack.rs  parse.rs  range.rs  result.rs  variable.rs
tests/: check_test.rs  cli.rs  result_test.rs
tests/bats/: post_install.bats
tests/integration_tests/: Dockerfile
