[package]
name = "geneos-xtender"
version = "0.9.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Johan Thorén <jthoren@itrsgroup.com>"]
readme = "README.md"
repository = "https://github.com/ITRS-Group/geneos-xtender"
keywords = ["nagios", "geneos", "monitoring", "op5", "opsview"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtender"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.1"
futures = "0.3.28"
log = "0.4.18"
perfdata = "0.4.2"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde-csv-core = "0.2.0"
serde_yaml = "0.9.21"
serde_json = "1.0.96"
shellwords = "1.1.0"
stderrlog = "0.5.4"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
wait-timeout = "0.2.0"
openssl = "0.10.57"
lazy_static = "1.4.0"
hex = "0.4.3"
once_cell = "1.19.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.6.0"
