[package]
name = "geneos-xtender"
version = "0.10.0"
license = "Apache-2.0"
edition = "2021"
authors = ["Johan Thorén <jthoren@itrsgroup.com>"]
readme = "README.md"
repository = "https://github.com/ITRS-Group/geneos-xtender"
keywords = ["nagios", "geneos", "monitoring", "op5", "opsview"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtender"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
openssl = "0.10.66"
perfdata = "0.4.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
shellwords = "1.1.0"
stderrlog = "0.6"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
wait-timeout = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd = "2.0.17"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.19.1"
